...
                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aSw-Mi-28u">
                            <rect key="frame" x="0.0" y="0.0" width="414" height="441"/>
                            <subviews>
                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="4XQ-Pz-o6P">
                                    <rect key="frame" x="16" y="24" width="382" height="55"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yNM-Sl-xOa">
                                            <rect key="frame" x="170" y="0.0" width="42" height="20.5"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <color key="textColor" name="head"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello , we are happy you're using our app " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" 
...
                                                <userDefinedRuntimeAttribute type="color" keyPath="selectedTitleColor">
                                                    <color key="value" name="primaryColor"/>
                                                </userDefinedRuntimeAttribute>
                                                <userDefinedRuntimeAttribute type="color" keyPath="selectedLineColor">
                                                    <color key="value" name="secondayColor"/>
                                                </userDefinedRuntimeAttribute>
                                                <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Enter Email"/>
                                                <userDefinedRuntimeAttribute type="string" keyPath="title" value="email"/>
                                            </userDefinedRuntimeAttributes>
                                        </textField>
                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iUw-t1-8SL" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
                                            <rect key="frame" x="0.0" y="66" width="382" height="50"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                            <userDefinedRuntimeAttributes>
                                                <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Enter Password"/>
                                                <userDefinedRuntimeAttribute type="string" keyPath="title" value="password"/>
                                                <userDefinedRuntimeAttribute type="color" keyPath="textColor">
                                                    <color key="value" name="head"/>
                                                </userDefinedRuntimeAttribute>
                                                <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
                                                    <color key="value" name="textGray"/>
...
